--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,35 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h4 class="card-title">Barra de progreso</h4>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.ariaValueNow]="percent1" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="percent1 + '%'"></div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" [attr.ariaValueNow]="percent2" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="percent2 + '%'"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementer (setValue)="percent1 = $event" nombre="Progress Azul" [percent]="percent1"></app-incrementer>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <app-incrementer (setValue)="percent2 = $event" nombre="Progress Verde" [percent]="percent2"></app-incrementer>
+            </div>
+        </div>
+    </div>
+
+</div>
